@startuml
class QuadriFace {
    + QuadriFace()
}
class Test {
    + AddTetrahedron(num:uint) : Tetrahedon<Assignement3.Program.TetrahedonProperty>[]
    + AddCuboid(num:uint) : Cuboid<Assignement3.Program.CuboidProperty>[]
    + AddCylinder(num:uint) : Cylinder<Assignement3.Program.CylinderProperty>[]
}
QuadriFace --> "p1" Position
QuadriFace --> "p2" Position
QuadriFace --> "p3" Position
QuadriFace --> "p4" Position
@enduml
